web/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mathgen-web-deployment
spec: 
  selector: 
    matchLabels: 
      app: mathgen-web
  template: 
    metadata: 
      labels: 
        app: mathgen-web
    spec: 
      containers: 
        - 
          image: "ledongthuc/mathgen-web:latest"
          name: http-server
