web/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mathgen-web-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mathgen-web
