web/k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mathgen-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mathgen.thuc.space
    http:
      paths:
      - backend:
          serviceName: mathgen-web-service
          servicePort: 80
